# wavesurfer.js

./: .gitignore  Cargo.toml  WASM_README.md  build-wasm.sh  package.json  rollup.config.js
examples/: spectrogram-performance.js  spectrogram-windowed.js  spectrogram-worker.js  spectrogram.js
src/: event-emitter.ts  fft.ts  lib.rs  renderer.ts  spectrogram-windowed.worker.ts  timer.ts  utils.rs  wavesurfer.ts
src/__tests__/: timer.test.ts
src/plugins/: envelope.ts  spectrogram-windowed.ts  spectrogram-windowed.worker.js  spectrogram-windowed.worker.ts  spectrogram-worker.ts  spectrogram.ts  wave-envelope.ts
src/plugins/spectrogram/: fft.worker.ts  lib.rs
