[package]
name = "wavesurfer-fft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/plugins/spectrogram/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
rustfft = "6.1"
num-complex = "0.4"
wee_alloc = "0.4"

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[features]
default = ["console_error_panic_hook"]

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
] 